# obox-mcp

./: README.md  README.vi.md  agent.py  main.py  pyproject.toml
.agent/rules/: core.md
.github/: copilot-instructions.md
obox_mcp/: bat.py  dotnet.py  fd.py  fzf.py  installer.py  just.py  nodejs.py  python.py  ripgrep.py  utils.py
project_templates/: obox_fastapi.py  react.py
tests/: test_agent.py  test_mcp_descriptions.py
